Changes for 2.2.3rc1

New features:
....IJ.... [ZBXNEXT-1889] made startup.sh and shutdown.sh scripts for Java gateway work in /bin/sh (asaveljevs)
.D........ [ZBX-7597] added description of the returned value types to the agentd manpage (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian and Japanese translations; thanks to Zabbix translators (Richlv)

Bug fixes:
A......... [ZBX-6151] fixed graph prototype and trigger prototype validation so item prototypes are no longer allowed from multiple discovery rules and fixed graph and graph prototype update validation allowing to pass only 'gitemid' parameter without 'itemid' (Ivo)
........S. [ZBX-7737] fixed host inventory item update order to prevent database deadlocks (Juris)
........S. [ZBX-5804] added overflow/wrapping detection to calculated items (Juris)
........S. [ZBX-7659] fixed handling of hosts without any interfaces (Juris)
...G...... [ZBX-7740] fixed agent crash if logrt and log items are not supported (Andris)
...G...PS. [ZBX-6731] faster processing of log files by agent on Unix (Andris)
...G...PS. [ZBX-6729] faster processing of log files by agent on Microsoft Windows (Andris)
....IJ.... [ZBX-5379] added stale PID file detection for Java gateway (asaveljevs)
....IJ.... [ZBX-5558] fixed Java gateway error messages not being shown in the console on startup (asaveljevs)
.......PS. [ZBX-7840] fixed icmppingloss[] calculation when a DNS name is pingable by both IPv4 and IPv6 (asaveljevs)
..F....... [ZBX-7883] fixed JS error when adding slides in configuration page (Ivo)
........S. [ZBX-7836] fixed possible crash when a value older than the last item value was added to the value cache (wiper)
..F....... [ZBX-7851] fixed item, trigger and discovery rule sorting by "Status" field (Ivo)
..F....... [ZBX-7858] fixed some triggers not being displayed in Monitoring -> Triggers (Pavels)
...G...... [ZBX-6933] added substitution of eventlog parameter insertion strings (wiper)